# voice-claude-code

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_sender.py  test_transcriber.py
voice_claude/: __init__.py  config.py  main.py  sender.py  transcriber.py
voice_claude/modes/: __init__.py  continuous.py  push_to_talk.py  simple.py
