[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-claude"
version = "0.1.0"
description = "Voice-controlled Claude Code agent — speak commands, get code."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Bogdan Micle" },
]
keywords = ["claude", "voice", "speech", "cli", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "speechrecognition>=3.10",
    "pyaudio>=0.2.14",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
whisper = [
    "faster-whisper>=1.0",
    "numpy>=1.24",
]
hotkey = [
    "keyboard>=0.13",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
voice-claude = "voice_claude.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
